--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,17 @@
+buildscript {
+    ext.kotlin_version = '1.9.0' // Ensure this is the desired Kotlin version
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.3.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // Add other dependencies here
+    }
+}
+
+
 allprojects {
     repositories {
         google()
