--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,28 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  rive: ^0.13.14
+  oauth2: ^2.0.0
+  get: ^4.6.6
+  icons_plus: ^4.0.0
+  analog_clock: ^0.1.0
+  camera: ^0.11.0+1
+  image_picker: ^1.1.2
+  intl: ^0.19.0
+  flutter_charts: ^0.5.2
+  sqflite: ^2.3.0
+  path_provider: ^2.0.5
+  shared_preferences: ^2.2.2
+  http: ^1.2.2
+  dropdown_search: ^5.0.3
+  geolocator: ^11.0.0
+  geocoding: ^2.1.1
+  mutex: ^3.1.0
+  firebase_remote_config: ^5.1.2
+  metaxperts_dynamic_apis:
+    git:
+      url: https://github.com/Hamid-Raza-22/metaxperts_dynamic_apis.git
+
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +81,25 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/samples/ui/rive_app/
+    - assets/samples/ui/rive_app/rive/
+    - assets/samples/ui/rive_app/images/
+    - assets/samples/ui/rive_app/images/backgrounds/
+    - assets/images/bg4.png
+    - assets/samples/ui/rive_app/images/avatars/
+    - assets/images/bg2.png
+    - assets/images/inventrybg.png
+    - assets/images/glass.png
+    - assets/images/1st.gif
+    - assets/samples/ui/rive_app/images/avatars/avatar_2.png
+    - assets/samples/ui/rive_app/images/avatars/avatar_1.png
+    - assets/samples/ui/rive_app/images/avatars/avatar_3.png
+    - assets/samples/ui/rive_app/images/avatars/avatar_4.png
+    - assets/samples/ui/rive_app/images/avatars/avatar_default.jpg
+    - assets/samples/ui/rive_app/images/avatars/addshop.png
+    - assets/P1.png
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -74,17 +114,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter-Regular.ttf
+        - asset: assets/fonts/Inter-SemiBold.ttf
+          weight: 600
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Bold.ttf
+          weight: 900
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
